EasyFlowParser.Desktop/Parsing/ANTLR/EasyFlowParser.cs
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g 2011-12-18 18:54:46

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 168, 219
// Unreachable code detected.
#pragma warning disable 162


  using System.Collections.Generic; 
  using System.Linq;
  using Easis.Wfs.EasyFlow.Model;
  using Easis.Wfs.EasyFlow.Model.Collections;
  using System.Globalization;


using System;
using Antlr.Runtime;
using IList 		= System.Collections.IList;
using ArrayList 	= System.Collections.ArrayList;
using Stack 		= Antlr.Runtime.Collections.StackList;



using Antlr.Runtime.Tree;

namespace  Easis.Wfs.EasyFlow.Parsing 
{
public partial class EasyFlowParser : Parser
{
    public static readonly string[] tokenNames = new string[] 
	{
        "<invalid>", 
		"<EOR>", 
		"<DOWN>", 
		"<UP>", 
		"WS", 
		"NEWLINE", 
		"REQUIRE", 
		"SEMICOLON", 
		"LSQ", 
		"FLOW", 
		"COLON", 
		"ID", 
		"ASSIGN", 
		"RSQ", 
		"TILDA", 
		"STEP", 
		"RUNS", 
		"AFTER", 
		"LPAREN", 
		"APP", 
		"EXEC", 
		"RPAREN", 
		"CODE_BLOCK", 
		"COMMA", 
		"DOT", 
		"ARROW", 
		"SWEEP", 
		"STRING", 
		"INT", 
		"DOUBLE", 
		"BOOL", 
		"ID_CONST", 
		"ML_COMMENT", 
		"SL_COMMENT", 
		"POST", 
		"CODE", 
		"PRE", 
		"END", 
		"LCUR", 
		"RCUR", 
		"ON", 
		"ID_BASE", 
		"ESC_SEQ", 
		"DEC_DIGIT", 
		"EXPONENT", 
		"HEX_DIGIT", 
		"UNICODE_ESC", 
		"OCTAL_ESC", 
		"RULETTER"
    };

    public const int EXPONENT = 44;
    public const int LSQ = 8;
    public const int SWEEP = 26;
    public const int DEC_DIGIT = 43;
    public const int OCTAL_ESC = 47;
    public const int APP = 19;
    public const int STEP = 15;
    public const int PRE = 36;
    public const int ID = 11;
    public const int EOF = -1;
    public const int REQUIRE = 6;
    public const int RCUR = 39;
    public const int LPAREN = 18;
    public const int CODE = 35;
    public const int ML_COMMENT = 32;
    public const int RPAREN = 21;
    public const int TILDA = 14;
    public const int ESC_SEQ = 42;
    public const int COMMA = 23;
    public const int DOUBLE = 29;
    public const int DOT = 24;
    public const int RSQ = 13;
    public const int LCUR = 38;
    public const int UNICODE_ESC = 46;
    public const int BOOL = 30;
    public const int ON = 40;
    public const int HEX_DIGIT = 45;
    public const int SEMICOLON = 7;
    public const int EXEC = 20;
    public const int INT = 28;
    public const int AFTER = 17;
    public const int COLON = 10;
    public const int WS = 4;
    public const int RULETTER = 48;
    public const int NEWLINE = 5;
    public const int FLOW = 9;
    public const int RUNS = 16;
    public const int ID_BASE = 41;
    public const int SL_COMMENT = 33;
    public const int ASSIGN = 12;
    public const int CODE_BLOCK = 22;
    public const int ID_CONST = 31;
    public const int POST = 34;
    public const int ARROW = 25;
    public const int END = 37;
    public const int STRING = 27;

    // delegates
    // delegators



        public EasyFlowParser(ITokenStream input)
    		: this(input, new RecognizerSharedState()) {
        }

        public EasyFlowParser(ITokenStream input, RecognizerSharedState state)
    		: base(input, state) {
            InitializeCyclicDFAs();

             
        }
        
    protected ITreeAdaptor adaptor = new CommonTreeAdaptor();

    public ITreeAdaptor TreeAdaptor
    {
        get { return this.adaptor; }
        set {
    	this.adaptor = value;
    	}
    }

    override public string[] TokenNames {
		get { return EasyFlowParser.tokenNames; }
    }

    override public string GrammarFileName {
		get { return "D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g"; }
    }


    public class program_return : ParserRuleReturnScope
    {
        public ParseResult ParseResult;
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "program"
    // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:29:1: program returns [ParseResult ParseResult] : wsns ( topClause wsns )* ;
    public EasyFlowParser.program_return program() // throws RecognitionException [1]
    {   
        EasyFlowParser.program_return retval = new EasyFlowParser.program_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        EasyFlowParser.wsns_return wsns1 = default(EasyFlowParser.wsns_return);

        EasyFlowParser.topClause_return topClause2 = default(EasyFlowParser.topClause_return);

        EasyFlowParser.wsns_return wsns3 = default(EasyFlowParser.wsns_return);



          
          Init(); // Initialize parser
          
          StartRootContext(); // Start root context
          
          StartRootScope(); // Start root scope (scipt)

        try 
    	{
            // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:47:3: ( wsns ( topClause wsns )* )
            // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:47:5: wsns ( topClause wsns )*
            {
            	root_0 = (object)adaptor.GetNilNode();

            	PushFollow(FOLLOW_wsns_in_program109);
            	wsns1 = wsns();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, wsns1.Tree);
            	// D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:47:10: ( topClause wsns )*
            	do 
            	{
            	    int alt1 = 2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0 == REQUIRE || LA1_0 == LSQ || (LA1_0 >= TILDA && LA1_0 <= STEP)) )
            	    {
            	        alt1 = 1;
            	    }


            	    switch (alt1) 
            		{
            			case 1 :
            			    // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:47:12: topClause wsns
            			    {
            			    	PushFollow(FOLLOW_topClause_in_program113);
            			    	topClause2 = topClause();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, topClause2.Tree);
            			    	PushFollow(FOLLOW_wsns_in_program115);
            			    	wsns3 = wsns();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, wsns3.Tree);

            			    }
            			    break;

            			default:
            			    goto loop1;
            	    }
            	} while (true);

            	loop1:
            		;	// Stops C# compiler whining that label 'loop1' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);

              FinishScope(); // Finish root scope
              
              FinishContext(); // Finish root context
              
              Finali(); // Finalize parser
              retval.ParseResult =  _parseResult; // Return parse result  

        }

          catch (RecognitionException re)
          {
            throw re;
          }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "program"

    public class wsn_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "wsn"
    // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:51:1: wsn : ( WS | NEWLINE );
    public EasyFlowParser.wsn_return wsn() // throws RecognitionException [1]
    {   
        EasyFlowParser.wsn_return retval = new EasyFlowParser.wsn_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken set4 = null;

        object set4_tree=null;

        try 
    	{
            // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:52:3: ( WS | NEWLINE )
            // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:
            {
            	root_0 = (object)adaptor.GetNilNode();

            	set4 = (IToken)input.LT(1);
            	if ( (input.LA(1) >= WS && input.LA(1) <= NEWLINE) ) 
            	{
            	    input.Consume();
            	    adaptor.AddChild(root_0, (object)adaptor.Create(set4));
            	    state.errorRecovery = false;
            	}
            	else 
            	{
            	    MismatchedSetException mse = new MismatchedSetException(null,input);
            	    throw mse;
            	}


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }

          catch (RecognitionException re)
          {
            throw re;
          }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "wsn"

    public class wsnp_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "wsnp"
    // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:57:1: wsnp : ( wsn )+ ;
    public EasyFlowParser.wsnp_return wsnp() // throws RecognitionException [1]
    {   
        EasyFlowParser.wsnp_return retval = new EasyFlowParser.wsnp_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        EasyFlowParser.wsn_return wsn5 = default(EasyFlowParser.wsn_return);



        try 
    	{
            // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:58:3: ( ( wsn )+ )
            // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:58:5: ( wsn )+
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:58:5: ( wsn )+
            	int cnt2 = 0;
            	do 
            	{
            	    int alt2 = 2;
            	    int LA2_0 = input.LA(1);

            	    if ( ((LA2_0 >= WS && LA2_0 <= NEWLINE)) )
            	    {
            	        alt2 = 1;
            	    }


            	    switch (alt2) 
            		{
            			case 1 :
            			    // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:58:5: wsn
            			    {
            			    	PushFollow(FOLLOW_wsn_in_wsnp160);
            			    	wsn5 = wsn();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, wsn5.Tree);

            			    }
            			    break;

            			default:
            			    if ( cnt2 >= 1 ) goto loop2;
            		            EarlyExitException eee2 =
            		                new EarlyExitException(2, input);
            		            throw eee2;
            	    }
            	    cnt2++;
            	} while (true);

            	loop2:
            		;	// Stops C# compiler whining that label 'loop2' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }

          catch (RecognitionException re)
          {
            throw re;
          }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "wsnp"

    public class wsns_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "wsns"
    // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:62:1: wsns : ( wsn )* ;
    public EasyFlowParser.wsns_return wsns() // throws RecognitionException [1]
    {   
        EasyFlowParser.wsns_return retval = new EasyFlowParser.wsns_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        EasyFlowParser.wsn_return wsn6 = default(EasyFlowParser.wsn_return);



        try 
    	{
            // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:63:3: ( ( wsn )* )
            // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:63:5: ( wsn )*
            {
            	root_0 = (object)adaptor.GetNilNode();

            	// D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:63:5: ( wsn )*
            	do 
            	{
            	    int alt3 = 2;
            	    int LA3_0 = input.LA(1);

            	    if ( ((LA3_0 >= WS && LA3_0 <= NEWLINE)) )
            	    {
            	        alt3 = 1;
            	    }


            	    switch (alt3) 
            		{
            			case 1 :
            			    // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:63:5: wsn
            			    {
            			    	PushFollow(FOLLOW_wsn_in_wsns177);
            			    	wsn6 = wsn();
            			    	state.followingStackPointer--;

            			    	adaptor.AddChild(root_0, wsn6.Tree);

            			    }
            			    break;

            			default:
            			    goto loop3;
            	    }
            	} while (true);

            	loop3:
            		;	// Stops C# compiler whining that label 'loop3' has no statements


            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
        }

          catch (RecognitionException re)
          {
            throw re;
          }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "wsns"

    public class requireClause_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };

    // $ANTLR start "requireClause"
    // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:66:1: requireClause : REQUIRE wsnp idList wsns SEMICOLON ;
    public EasyFlowParser.requireClause_return requireClause() // throws RecognitionException [1]
    {   
        EasyFlowParser.requireClause_return retval = new EasyFlowParser.requireClause_return();
        retval.Start = input.LT(1);

        object root_0 = null;

        IToken REQUIRE7 = null;
        IToken SEMICOLON11 = null;
        EasyFlowParser.wsnp_return wsnp8 = default(EasyFlowParser.wsnp_return);

        EasyFlowParser.idList_return idList9 = default(EasyFlowParser.idList_return);

        EasyFlowParser.wsns_return wsns10 = default(EasyFlowParser.wsns_return);


        object REQUIRE7_tree=null;
        object SEMICOLON11_tree=null;


          StartScope(ScopeType.Require);

        try 
    	{
            // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:75:3: ( REQUIRE wsnp idList wsns SEMICOLON )
            // D:\\work\\code\\nano\\FlowSystem\\EasyFlowParser.Desktop\\Parsing\\ANTLR\\EasyFlow.g:75:5: REQUIRE wsnp idList wsns SEMICOLON
            {
            	root_0 = (object)adaptor.GetNilNode();

            	REQUIRE7=(IToken)Match(input,REQUIRE,FOLLOW_REQUIRE_in_requireClause207); 
            		REQUIRE7_tree = (object)adaptor.Create(REQUIRE7);
            		adaptor.AddChild(root_0, REQUIRE7_tree);

            	PushFollow(FOLLOW_wsnp_in_requireClause209);
            	wsnp8 = wsnp();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, wsnp8.Tree);
            	PushFollow(FOLLOW_idList_in_requireClause211);
            	idList9 = idList();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, idList9.Tree);
            	PushFollow(FOLLOW_wsns_in_requireClause213);
            	wsns10 = wsns();
            	state.followingStackPointer--;

            	adaptor.AddChild(root_0, wsns10.Tree);
            	SEMICOLON11=(IToken)Match(input,SEMICOLON,FOLLOW_SEMICOLON_in_requireClause215); 
            		SEMICOLON11_tree = (object)adaptor.Create(SEMICOLON11);
            		adaptor.AddChild(root_0, SEMICOLON11_tree);


            	      foreach (var id in ((idList9 != null) ? idList9.Identifiers : default(IEnumerable<Identifier>)))      
            	      {
            	        FileRequirement requirement = new FileRequirement(id.Name);
            	        FinishObj(requirement, id);
            	      
            	        AddRequirement(new FileRequirement(id.Name));
            	      }      
            	    

            }

            retval.Stop = input.LT(-1);

            	retval.Tree = (object)adaptor.RulePostProcessing(root_0);
            	adaptor.SetTokenBoundaries(retval.Tree, (IToken) retval.Start, (IToken) retval.Stop);
              
              FinishScope();   

        }

          catch (RecognitionException re)
          {
            throw re;
          }
        finally 
    	{
        }
        return retval;
    }
    // $ANTLR end "requireClause"

    public class topClause_return : ParserRuleReturnScope
    {
        private object tree;
        override public object Tree
        {
        	get { return tree; }
        	set { tree = (object) value; }
        }
    };
